test/tests/errors/error-output-non-printable.sm
// true
// false
// false
/**/
/**/

program {
    output array[1:2]: int;
}